done with first draft, styling

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     startInput.setAttribute('name', 'start');
     startInput.setAttribute('id', 'start-date');
     startInput.setAttribute('value', 'value');
-    startInput.setAttribute('style', 'margin:');
+    startInput.setAttribute('style', 'margin: 1rem;');
     form.appendChild(startInput);
     // end text
     const endText = document.createElement('p');
