--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   }
 
   function updateDate() {
-    preventDefault();
+    // preventDefault();
     alert("it works");
     const start = document.getElementById('start-date').value
     const end = document.getElementById('end-date').value
