debuggin onsubmit function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- The API response will be printed here. -->
 <h3 id="date-range">Date Range: </h3>
-<form id="the-form" onsubmit="return updateDate();">
+<form id="the-form" onsubmit="return updateDate(event);">
   <!-- Start Date: <input type="date" name="start" id="start-date" value="value">
   End Date: <input type="date" name="end" id="endDate" value="value">
   <input type="submit"> -->
