debuggin onsubmit function

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
     return `${month}/${day}/${year}`
   }
 
-  function valdiateDate(start, end) {
+  function validateDate(start, end) {
     const startDate = Date.parse(start);
     const endDate = Date.parse(end);
     return startDate < endDate
