debuggin onsubmit function

--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
   function validateDate(start, end) {
     const startDate = Date.parse(start);
     const endDate = Date.parse(end);
+    console.log(startDate, endDate);
     return startDate < endDate
   }
 </script>
