--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
   function validateDate(start, end) {
     const startDate = Date.parse(start);
     const endDate = Date.parse(end);
-    console.log(startDate, endDate);
+    console.log(start, end);
     return startDate < endDate
   }
 </script>
