--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p class="g-signin2" data-onsuccess="renderButton"></p>
 
 <!-- The API response will be printed here. -->
-<h3 id="date-range">Date Range: </h3>
+<h3 id="date-range">Date Range: (select dates to view data)</h3>
 <form id="the-form" onsubmit="return updateDate(event);">
   <!-- Start Date: <input type="date" name="start" id="start-date" value="value">
   End Date: <input type="date" name="end" id="endDate" value="value">
@@ -71,7 +71,6 @@
     const start = document.getElementById('start-date').value
     const end = document.getElementById('end-date').value
     if (validateDate(start, end)) {
-      alert("it works");
       queryReports(start, end)
     }
     else {
@@ -418,7 +417,6 @@
   function validateDate(start, end) {
     const startDate = Date.parse(start);
     const endDate = Date.parse(end);
-    console.log(start, end);
     return startDate < endDate
   }
 </script>
